force-app/main/default/objects/Opportunity/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Estado del proceso de aprobación del descuento aplicado a la oportunidad.</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>