force-app/main/default/objects/Opportunity/fields/Requires_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la oportunidad requiere aprobación del Responsable de Ventas por tener un descuento superior al 15%.</description>
    <label>Requires Approval</label>
    <type>Checkbox</type>
</CustomField>